--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -191,9 +191,9 @@
     <string name="we_have_sent_otp">We have sent you OTP on %1$s</string>
     <string name="did_not_receive_otp">Didn\'t Receive OTP?</string>
     <string name="resend">Resend</string>
-    <string name="resend_otp_alert">The OTP you generated has been sent to you. Please do not share your OTP with anyone.</string>
+    <string name="resend_otp_alert">OTP has been sent. Please do not share your OTP with anyone</string>
     <string name="send_otp_via_call">Send OTP via call</string>
-    <string name="call_submitted">Call Request Submitted.</string>
+    <string name="call_submitted">Call Request Submitted</string>
     <string name="we_promise_not_spam">We promise not to spam you 😇</string>
     <string name="you_are_on_final_step">You are on the final step for registration</string>
     <string name="enter_otp_sent_on_your_mobile">Enter OTP sent on your registered mobile number</string>
@@ -554,7 +554,7 @@
     <string name="enter_ifsc_code">Enter IFSC Code</string>
     <string name="enter_your_full_name">Enter Your Full Name</string>
     <string name="enter_your_email_id">Enter Your Email ID</string>
-    <string name="enter_mobile_number">Enter Mobile Number</string>
+    <string name="enter_mobile_number">Enter your mobile number</string>
     <string name="nominee_name_">Nominee Name*</string>
     <string name="enter_nominee_name">Enter Nominee Name</string>
     <string name="relationship_">Relationship*</string>
