--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -408,6 +408,21 @@
     <string name="utr_number">UTR Number</string>
     <string name="transaction_confirm">Transaction Status</string>
 
+
+    <string name="steps_to_follow">Steps to follow</string>
+    <string name="select_detail">1. Select \"Detailed\" in Statement Type</string>
+    <string name="select_specific">2. Select \"Specific\" Period</string>
+    <string name="select_from_date">3. Select \"01-Jan-1990\" in \"From Date\"</string>
+    <string name="select_zero_balance">4. Select \"With Zero balance folios\"</string>
+    <string name="enter_your_email_address">5. Enter your email address</string>
+    <string name="enter_pan_password">6. Enter password as your PAN number (in UPPER CASE), confirm the same password and hit \"Submit\"</string>
+    <string name="receive_email">7. You will receive an email from CAMS with your CAS. Please forward the email to <font fgcolor='#A32CC3'>cas@tarrakki.com</font></string>
+    <string name="login_to_tarrakki">8. Login to Tarrakki to see your updated portfolio.</string>
+    <string name="in_some_time">In sometime…</string>
+
+
+    <string name="return_xirr">Returns (XIRR)</string>
+    <string name="return_absolute">Returns (Absolute)</string>
     <string name="nav_">NAV:</string>
     <string name="folio_no_">Folio No.:</string>
     <string name="order_no_">Order No.:</string>
@@ -861,6 +876,7 @@
     <string name="what_you_will_get">What you will get?</string>
 
     <string name="set_call_with_adviser">Set a call with our adviser</string>
+    <string name="visit_cams_website">CAMS Website</string>
 
     <string name="in_a_rapidly_changing">
         In a rapidly changing business environment, it is difficult to pick a good stock to invest in. Choosing the right stock to invest in is one of the major problems investors in India face.
