Tarrakki App logo changed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -927,7 +927,7 @@
     <string name="mutual_recommend">Mutual Funds\nRecommendations</string>
     <string name="your_liquiloans_portfolio">Your Liquiloans Portfolio</string>
     <string name="invest_in_consumer_loans">Invest in Consumer Loans</string>
-    <string name="liquiloans">Liquiloans</string>
+    <string name="liquiloans">LiquiLoans</string>
     <string name="liquid_amount">Liquid Amount</string>
     <string name="lock_in_amount">Lock-in Amount</string>
     <string name="liquiloans_faq">Liquiloans FAQ</string>
