Minor UI change in Import Funds Screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -164,7 +164,7 @@
     <string name="period">Period</string>
     <string name="specific_period">Specific Period</string>
     <string name="from_date">From Date</string>
-    <string name="first_jan">1st jan, 1990</string>
+    <string name="first_jan">1st Jan, 1990</string>
     <string name="to_date">To Date</string>
     <string name="current_date">Current Date</string>
     <string name="folio_listing">Folio Listing</string>
@@ -441,7 +441,7 @@
     <string name="select_zero_balance">4. Select \"With Zero balance folios\"</string>
     <string name="enter_your_email_address">5. Enter your email address</string>
     <string name="enter_pan_password">6. Enter password as your PAN number (in UPPER CASE), confirm the same password and hit \"Submit\"</string>
-    <string name="receive_email">7. You will receive an email from CAMS with your CAS. Please forward the email to <font fgcolor='#A32CC3'>cas@tarrakki.com</font></string>
+    <string name="receive_email">7. You will receive an email from CAMS with your CAS. Please forward the email to cas@tarrakki.com</string>
     <string name="login_to_tarrakki">8. Log in to Tarrakki to see your updated portfolio.</string>
     <string name="in_some_time">In sometime…</string>
 
