--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -377,6 +377,7 @@
     <string name="cart_delete">Are you sure you want to delete this fund from the cart ?</string>
     <string name="cart_fund_added">The fund has been added to your cart successfully.</string>
     <string name="cart_goal_added">The goal has been added to your cart successfully.</string>
+    <string name="no_scheme_document">No scheme document found for this fund</string>
 
     <string name="alert_profile_reset">Your Password has been Reset Successfully.</string>
     <string name="alert_profile_change">Your Password has been Changed Successfully.</string>
